[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crex"
dynamic = ["version"]
authors = [
    { name = "miviskin", email = "miviskin@gmail.com" },
]
description = "Library for crypto exchange"
readme = "README.md"
license-files = { paths = ["LICENSE.txt"] }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'exapi ~= 0.1',
    'uvloop ~= 0.16',
    'pydantic ~= 1.10',
    'anyio ~= 3.6.2',
    'python-dotenv ~= 0.21.0',
]

[project.optional-dependencies]
dev = [
    'build',
    'twine',
    'hatch',
    'pytest',
    'pytest-asyncio',
    'pytest-httpx',
    'pytest-cov',
]

[project.urls]
"GitHub" = "https://github.com/miviskin/crex"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/crex",
]

[tool.hatch.envs.default]
pre-install-commands = [
    'echo "INSTAL Crex"',
]
post-install-commands = [
    'echo "INSTALED Crex"',
]

[tool.hatch.envs.default.scripts]
list = "ls -al"
